[project]
name = "embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.1.0",
    "einops>=0.8.0",
    "ipykernel>=6.29.5",
    "modal>=0.66.7",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "transformers>=4.46.2",
    "wandb>=0.18.7",
]
